CHANGES
-------
This file lists changes made to the IGTF Trust Anchor distribution. Please 
refer to the README.txt file for additional information on installing the 
Distribution and to be informed about important information on distribuion 
lay-out.

Changes from 1.82 to 1.83
-------------------------
(29 May 2017)

* Added new trust anchor for accredited KISTI CA v3 (KR)

Changes from 1.81 to 1.82
-------------------------
(27 March 2017)

* Added new G2 UGrid trust anchor (UA)
* Extended validity for AEGIS CA (RS)
* Withdrawn discontinued FNAL KCA (US)
* Extended valitity for REUNA CA (CL)

Changes from 1.80 to 1.81
-------------------------
(28 February 2017)

* Added accredited DarkMatter classic QV-intermediate ICAs (AE)
  including QuoVadis Root CA 2 G3 and Root CA 3 G3 higher level CAs (BM)
* Updated contact information for EUN EG-GRID CA (EG)
* Withdrawn classic UKeScienceCA-2A in advance of repurposing (UK)

Changes from 1.79 to 1.80
-------------------------
(30 January 2017)

* Discontinued BEGrid2008 (BELNET) classic authority (BE)

Changes from 1.78 to 1.79
-------------------------
(28 November 2016)

* Updated UNLPGrid CA with extended validity period (AR)
* Fix regular expressions in CILogon and NCSA CA namespaces files (US)
* Included rollover CA IRAN-GRID-CGC-G2 (IR)
* Corrected an incorrect line in selected info files for DigiCert (US)
* Discontinued expiring NECTEC CA (TH)

Changes from 1.77 to 1.78
-------------------------
(5 October 2016)

* Removed superseded INFN-CA-2006 CA (IT)
* Updated Debian packaging to support APT security improvements

Changes from 1.76 to 1.77
-------------------------
(26 September 2016)

* Updated namespaces and signing_policy files for CILogon Basic CA to
  permit DNs without "/C=US" (US)
* Added G2 series (sha-2) QuoVadis Root 2 and Grid ICA G2 (BM)
* Removed discontinued UniandesCA (CO)

Changes from 1.75 to 1.76
-------------------------
(25 July 2016)
