@@ -1,4 +1,4 @@
-# @(#)$Id: 29a95392.info,v 1.1 2014/10/13 13:40:06 pmacvsdg Exp $
+# @(#)$Id: 29a95392.info,v 1.2 2015/06/18 09:44:56 pmacvsdg Exp $
 # /C=NL/ST=Noord-Holland/L=Amsterdam/O=TERENA/CN=TERENA eScience SSL CA 2
 alias = TERENA-eScience-SSL-CA-2
 requires = UTN-USERTrust-RSA-CA
@@ -7,7 +7,7 @@ crl_url = http://crl.usertrust.com/TERENAeScienceSSLCA2.crl
 policy_url = https://www.terena.org/activities/tcs/repository/cps-server.pdf
 url = https://www.terena.org/activities/tcs/repository/
 email = tcs-pma@terena.org
-status = accredited:classic
+status = discontinued
 version = @VERSION@
 sha1fp.0 = @SHA1FP.0@
 subjectdn = @SUBJECTDN@
