@@ -1,4 +1,4 @@
-# @(#)$Id: 3c58f906.info,v 1.2 2010/09/24 15:23:02 pmacvsdg Exp $
+# @(#)$Id: 3c58f906.info,v 1.3 2015/06/18 09:44:56 pmacvsdg Exp $
 # AddTrust AB External CA Root
 #
 # Certificate Name: AddTrust External CA Root
@@ -8,6 +8,8 @@
 # Essential_SSL_addendum_to_the_Certification_Practice_Statement.pdf
 # PositiveSSL_addendum_to_the_Certification_Practice_Statement.pdf
 # litessl_cps_addendum.pdf
+#
+# 2017-05-16: this root is used no longer for TCS, but only for InCommon SSL
 #
 alias = AddTrust-External-CA-Root
 ca_url = http://crt.usertrust.com/AddTrustExternalCARoot.crt
