@@ -1,4 +1,4 @@
-# @(#)$Id: ac2d1719.info,v 1.1 2014/10/17 18:42:30 pmacvsdg Exp $
+# @(#)$Id: ac2d1719.info,v 1.2 2015/06/18 09:44:56 pmacvsdg Exp $
 # /C=NL/ST=Noord-Holland/L=Amsterdam/O=TERENA/CN=TERENA eScience SSL CA 2
 alias = TERENAeSciencePersonalCA2
 requires = UTN-USERTrust-RSA-CA
@@ -7,7 +7,7 @@ ca_url = http://crt.tcs.terena.org/TERENAeSciencePersonalCA2.crt
 crl_url = http://crl.tcs.terena.org/TERENAeSciencePersonalCA2.crl
 policy_url = https://www.terena.org/activities/tcs/repository/
 email = tcs-pma@terena.org
-status = accredited:mics
+status = discontinued
 version = @VERSION@
 sha1fp.0 = @SHA1FP.0@
 subjectdn = @SUBJECTDN@
