@@ -1,4 +1,4 @@
-# @(#)$Id: ff783690.info,v 1.1 2010/09/24 13:29:21 pmacvsdg Exp $
+# @(#)$Id: ff783690.info,v 1.2 2015/06/18 09:44:56 pmacvsdg Exp $
 # UTN-USERFirst-Hardware.crt (as subordinate of AddTrust External CA Root)
 alias = UTN-USERFirst-Hardware
 requires = AddTrust-External-CA-Root
@@ -7,7 +7,7 @@ crl_url = http://crl.usertrust.com/UTN-USERFirst-Hardware.crl
 policy_url = http://www.comodo.com/about/comodo-agreements.php
 url = http://www.comodo.com/
 email = tcs-pma@terena.org
-status = accredited:classic
+status = discontinued
 version = @VERSION@
 sha1fp.0 = @SHA1FP.0@
 subjectdn = @SUBJECTDN@
