@@ -75,3 +75,11 @@ INFN-CA-2006
 NECTEC
 BEGrid2008
 UKeScienceCA-2A
+UTN-USERFirst-Hardware
+TERENA-eScience-SSL-CA
+AAACertificateServices
+UTNAAAClient
+TERENAeSciencePersonalCA
+UTN-USERTrust-RSA-CA
+TERENA-eScience-SSL-CA-2
+TERENAeSciencePersonalCA2
